tests/typing/bad/testfile-generics-5.rs


fn f<T, T>(x : T) -> T {
    x
}


fn main() {
    print!("here\n")
}